Issue #282: fix multi-line notes.

--- a/app/src/main/res/layout/editaircraft.xml
+++ b/app/src/main/res/layout/editaircraft.xml
@@ -151,7 +151,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/lblPublicNoteHint"
                     android:autofillHints=""
-                    android:inputType="textCapSentences|textAutoCorrect" />
+                    android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />
             </TableRow>
 
             <TableRow
@@ -170,7 +170,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/lblPrivateNoteHint"
                     android:autofillHints=""
-                    android:inputType="textCapSentences|textAutoCorrect" />
+                    android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />
             </TableRow>
         </TableLayout>
 
