Use cachedir instead of pictures dir to handle Android 13 properly.  Looks like these changes are backwards compatible.

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,7 @@
 <paths>
     <external-path name="my_images" path="Android/data/com.myflightbook.android/files/Pictures" />
     <external-path name="my_docs" path="Android/data/com.myflightbook.android/files/Documents" />
+    <cache-path
+        name="cache"
+        path="." />
 </paths>
