Issue #294: add support for a floating date-of-flight  - Changed "None" to "Delete" for deleting a date (e.g., in aircraft inspections), since no date is different from a floating date.

--- a/app/src/main/res/layout/datepicker.xml
+++ b/app/src/main/res/layout/datepicker.xml
@@ -30,7 +30,7 @@
             android:layout_weight="0.3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/lblNone" />
+            android:text="@string/lblDeleteDate" />
 
         <Button
             android:id="@+id/btnDateNow"
