--- a/app/src/main/res/layout-land/newflight.xml
+++ b/app/src/main/res/layout-land/newflight.xml
@@ -28,8 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".3"
                 android:clickable="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
+                android:focusable="false"
                 android:nextFocusDown="@+id/spnAircraft" />
 
             <LinearLayout
