--- a/app/src/main/res/layout/widget_totals_item.xml
+++ b/app/src/main/res/layout/widget_totals_item.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="0dp"
+        android:clickable="true"
         android:id="@+id/layoutWidgetTotalsItem"
         android:layout_weight=".7"
         android:orientation="vertical">
@@ -29,6 +30,7 @@
 
     <TextView
         android:text=""
+        android:clickable="true"
         android:id="@+id/txtTotValue"
         android:layout_weight=".3"
         android:layout_width="0dp"
