Sounds like Google Play won't even let me have a direct link or a call to action.  Just remove the link for now.

--- a/app/src/main/res/layout/options.xml
+++ b/app/src/main/res/layout/options.xml
@@ -571,6 +571,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 style="?android:attr/buttonBarStyle"
+                android:visibility="gone"
                 android:text="@string/btnSupport" />
         </LinearLayout>
 
