--- a/app/src/main/res/layout/newflight.xml
+++ b/app/src/main/res/layout/newflight.xml
@@ -1056,6 +1056,19 @@
                 mfb:drawableStartCompat="@drawable/icon"
                 android:text="@string/lblMyFlightbook" />
         </LinearLayout>
+
+        <!-- Check Flights Issues -->
+        <TextView
+            style="@style/DividerBar"
+            android:text="@string/txtCheckFlightPossibleIssues"
+            android:id="@+id/checkFlightIssuesHeader"
+            android:visibility="gone" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="3dip"
+            android:id="@+id/checkFlightIssuesBody" />
+
     </LinearLayout>
 </ScrollView>
 
