--- a/app/src/main/res/menu/mfbqueuedflightmenu.xml
+++ b/app/src/main/res/menu/mfbqueuedflightmenu.xml
@@ -34,6 +34,10 @@
         android:title="@string/menuChooseTemplate"
         android:titleCondensed="@string/menuChooseTemplateShort" />
     <item
+        android:id="@+id/menuCheckFlight"
+        android:title="@string/menuCheckFlight"
+        android:titleCondensed="@string/menuCheckFlight" />
+    <item
         android:id="@+id/btnAutoFill"
         android:title="@string/menuAutoFill"
         app:showAsAction="ifRoom" />
