Add some missing padding

--- a/app/src/main/res/layout/addapproach.xml
+++ b/app/src/main/res/layout/addapproach.xml
@@ -15,7 +15,7 @@
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:padding="5dip">
 
         <TableRow
             android:layout_width="fill_parent"
