--- a/app/src/main/res/layout/calctime.xml
+++ b/app/src/main/res/layout/calctime.xml
@@ -10,11 +10,13 @@
         android:id="@+id/txtEquation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         android:text="@string/strEmpty" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         android:text="@string/tcAddTimeRangePrompt" />
 
     <TextView
