--- a/app/src/main/res/layout/addapproach.xml
+++ b/app/src/main/res/layout/addapproach.xml
@@ -3,7 +3,8 @@
     xmlns:mfb="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/layout_root">
 
     <TextView
         android:layout_width="fill_parent"
