--- a/app/src/main/res/layout/editaircraft.xml
+++ b/app/src/main/res/layout/editaircraft.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mfb="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/layout_root">
 
     <LinearLayout
         android:layout_width="fill_parent"
