--- a/app/src/main/res/layout/flightquery.xml
+++ b/app/src/main/res/layout/flightquery.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_margin="4dip">
+    android:layout_margin="4dip"
+    android:id="@+id/layout_root">
 
     <LinearLayout
         android:layout_width="match_parent"
