--- a/app/src/main/res/layout/selectmake.xml
+++ b/app/src/main/res/layout/selectmake.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/layout_root">
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
