--- a/app/src/main/res/layout/webview.xml
+++ b/app/src/main/res/layout/webview.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:addStatesFromChildren="false"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/layout_root">
 
     <LinearLayout
         android:layout_width="match_parent"
