Support for custom deadline editing from within the app.

--- a/app/src/main/res/layout/editaircraft.xml
+++ b/app/src/main/res/layout/editaircraft.xml
@@ -445,6 +445,14 @@
                         android:autofillHints="" />
                 </TableRow>
             </TableLayout>
+
+            <Button
+                android:id="@+id/btnCustomDeadlines"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:text="@string/lblCustomDeadlines" />
         </LinearLayout>
 
         <!-- Images -->
