--- a/app/src/main/res/layout-land/newflight.xml
+++ b/app/src/main/res/layout-land/newflight.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mfb="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
@@ -961,7 +962,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="3dip"
+        android:paddingLeft="3pt"
+        android:paddingRight="3pt"
+        android:paddingTop="3pt"
+        android:paddingBottom="15pt"
         android:id="@+id/checkFlightIssuesBody" />
     </LinearLayout>
 </ScrollView>
